Fixed menu not staying open when burger button activated. Various wording changes made. Media query added for logo image to stop menu button wrapping on narrow viewports (operates down to 320px).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,7 +81,7 @@ ul {
 }
 
 .email-link  {
-    color: #fafafa;
+    color: blue;
     text-align: center;
     padding-left: 5px;
 }
@@ -327,17 +327,23 @@ footer {
 }
 
 /*-------------------------------------------------- Media Queries */
+.logo-image {
+    width: 245px;
+    height: 65px;
+}
+
+@media (max-width:336px) {
+
+    .logo-image {
+        max-width: 75%;
+    }
+}
 
 @media(max-width: 767px) {
 
     .page-title h1 {
         margin-top: 0;
         margin-bottom: 0;
-    }
-
-    .campaigns {
-        min-height: 100px;
-        overflow-y: scroll;
     }
 
     .local-news {
@@ -386,7 +392,7 @@ footer {
     }
     
     footer {
-        margin-top: 20px;
+        margin-top: 10px;
     }
 }
 
@@ -408,79 +414,5 @@ footer {
         margin-top: 15px;
         min-width: 100%;
     }
-
-    .news-rail {
-        max-width: 100%;
-        max-height: 304px;
-    }
-
-   .text-metro-lobby {
-        min-height: 290px;
-    }
-
-    .news-cycling {
-        min-height: 364px;
-    }
-
-    .news-air-pollution {
-        max-width: 100%;
-        max-height: 304px;
-    }
 }
 
-@media (max-width:767px) {
-
-    .text-metro-lobby {
-        min-height: auto;
-        display: block;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-
-    .image-metro-lobby {
-        min-width: 94%;
-    }
-
-    .image-rail-metro {
-        max-width: 96%;
-    }
-}
-
-/* Collapse the Navbar at 1030px and below. This is to stop the expanded menu wrapping.*/
-@media (max-width: 1030px) {
-
-    .navbar-header {
-      float: none;
-    }
-    .navbar-left,.navbar-right {
-      float: none !important;
-    }
-    .navbar-toggle {
-      display: block;
-    }
-    .navbar-collapse {
-      border-top: 1px solid transparent;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-      display: none!important;
-    }
-    .navbar-nav {
-      float: none!important;
-      margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-      float: none;
-    }
-    .navbar-nav>li>a {
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-    .collapse.in {
-      display:block !important;
-    }
-}
